<resources>
    <string name="app_name">LearnConnect</string>
    <string name="login_to_see_contents">Login to see contents</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="hello_blank_fragment">Favorites feature will be filled</string>
    <string name="click_here"><u>click here</u></string>
    <string name="if_you_do_not_have_an_account">If you do not have an account</string>
    <string name="register_to_see_contents">Register to see contents</string>
    <string name="register">Register</string>
    <string name="if_you_already_have_an_account">if you already have an account</string>
    <string name="buy">Buy</string>
    <string name="you_bought_the_course">You bought the course</string>
    <string name="dark_mode">Dark Mode</string>
</resources>