<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_coding"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:rotation="19"
            android:rotationX="23"
            android:rotationY="19"
            android:src="@drawable/ic_coding" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_art"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:rotationX="40"
            android:src="@drawable/ic_art" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_geography"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:rotationX="49"
            android:src="@drawable/ic_geography" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_camera"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:rotation="45"
            android:src="@drawable/ic_camera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/register_to_see_contents"
            android:textSize="28sp"
            android:textStyle="bold"
            app:fontFamily="@font/angkor" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:hint="E-posta"
            android:textColorHint="@color/colorBorder"
            app:boxStrokeColor="@color/colorBorder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:hint="@string/password"
            android:textColorHint="@color/colorBorder"
            app:boxStrokeColor="@color/colorBorder"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_ripple"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/text_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"


                android:text="@string/if_you_already_have_an_account"
                app:fontFamily="@font/bagel_fat_one" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_navigate_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:text="@string/click_here"
                android:textColor="@color/text_signup"
                app:fontFamily="@font/bagel_fat_one" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>